finalizando tudo
